<resources>
    <string name="app_name">MySubmission3</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location : %s </string>
    <string name="repository">Repository : %s </string>
    <string name="company">Company : %s </string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="avatar">Avatar</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="change_theme_settings">Themes Settings</string>
    <string name="dark_mode">Mode Malam</string>
    <string name="favorite">Favorite</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="empty_favorite">Empty Favorite</string>

</resources>